This changelog shows an overview of what changed throughout releases, starting at the first distributed release.

++++++++++++++++++++++++++++++++
++   HandyMan 0.9.1-dev1      ++
++   Released on              ++
++++++++++++++++++++++++++++++++

Add note to unsupported TV types that they are not (yet) fully supported.
#5854 Add option to disable Textile while editing a resource and proper inheritance from system setting > resource setting.
#5870 More UI/UX updates to start screen en resource update panel.
Show number of resources in a context on context selection screen.
#5849 Add option to context root to create a new Resource in the root.
Make sure the resource_overview lexicon key exists, if not use the < 2.1 resource_view for the resource view option item.
#5885 Work around iPad (iOS) not resizing the screen properly on orientation change to landscape.
Make sure the cache gets cleared when "Clear Cache?" was ticked.
Fix label used for (un)publish resource.
#5883 Use MODX core processors for resource/create & resource/update.
#5854 Added setting to globally disable rich text.
#5870 Change the startscreen and resource UI a tad to include splitter rows for clarity.
#5876 Re-order resource options to make more sense and use the MODX lexicon.
#5872 Make textarea / richtext fields larger by default. Pending framework fix to auto-resize when page loads.
#5882 Fix breadcrumbs being split over multiple lines breaking the layout.
Sort resources in resource/list on menuindex.
#5874 Display full content on screen.
#5868 Fix missing date and user being set on create/update.


++++++++++++++++++++++++++++++++
++   HandyMan 0.9.0-dev1      ++
++   Released on 2011-10-04   ++
++++++++++++++++++++++++++++++++

Initial Contributors-Only release.