@@ -5,6 +5,7 @@ This changelog shows an overview of what changed throughout releases, starting a
 ++   Released on              ++
 ++++++++++++++++++++++++++++++++
 
+#5877 Add buttons to update or view a resource in resource/view
 Add note to unsupported TV types that they are not (yet) fully supported.
 #5854 Add option to disable Textile while editing a resource and proper inheritance from system setting > resource setting.
 #5870 More UI/UX updates to start screen en resource update panel.
